# ai-jam-partner

./: .gitignore  README.md  pyproject.toml
data/input_midi/: example_01.mid  max_piano.mid
data/output_midi/: example_01_ai.mid  max_piano_suite.mid
notebooks/: 00_end_to_end_demo.ipynb
